Fixed spacing on ActionArea

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -43,10 +43,13 @@ body {
         .actionArea {
             form {
                 display: flex; 
-                align-items: center;
+                align-items: flex-start;
                 padding-top: 25px;
                 select {
-                    margin-right: 15px;
+                    margin: 0px 10px;
+                }
+                [type="submit"] {
+                    margin-top: 15px; 
                 }
             }  
         }
